--- a/fluxproblem.html
+++ b/fluxproblem.html
@@ -6,6 +6,7 @@
 <button dispatch="POST1">Find post 1</button>
 <button dispatch="POST2">Find post 2</button>
 <button dispatch="POST3">Find post 3</button>
+<p>postNumber state set to: {{postNumber}}</p>
 <p>
 {{#if chosenPost}}
 Found post number: {{chosenPost.number}} titled: {{chosenPost.title}}.
